--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "keywords": [],
   "author": "",
+  "engines": {
+    "node": "10.x"
+  },
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^4.0.1"
